# hmm-regime

./: .gitignore  Cargo.toml  README.md
src/: error.rs  forward.rs  forward_backward.rs  lib.rs  model.rs  utils.rs
