[package]
name = "hmm-regime"
version = "0.1.0"
edition = "2021"
authors = ["LP Bot Team"]
description = "Hidden Markov Model for regime classification with Gaussian emissions"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"

